--- a/src/components/cart/cart.css
+++ b/src/components/cart/cart.css
@@ -1,10 +1,12 @@
 @import url('../../assets/styles/global.css');
 
 .cart_content {
+  display: flex;
+  flex-direction: column;
   background-color: white;
   padding: 1.5rem;
   margin: 2rem 0;
-  border-radius: .5rem;
+  border-radius: .6rem;
 }
 
 .cart-text {
@@ -20,12 +22,33 @@
   padding: 1rem;
 }
 
-.cart-image{
+.cart-image {
   padding: 1rem 5rem;
 }
 
-.cart-message{
+.cart-message {
   font-size: .9rem;
   font-weight: 500;
   color: var(--Rose-500);
+}
+
+@media (min-width: 768px) {
+  .cart_content {
+    height: min-content;
+    width: 40%;
+    margin: 0;
+
+  }
+  .cart-text {
+    font-size: 1rem;
+  }
+  
+  .cart-image {
+    padding: 1rem 3.5rem;
+    width: 200px;
+  }
+
+  .cart-message {
+    font-size: .6rem;
+  }
 }
