--- a/src/pages/styles.css
+++ b/src/pages/styles.css
@@ -22,10 +22,22 @@ xl	1280px	@media (min-width: 1280px) { ... }
   color: var(--Rose-900);
 }
 
-.home-container{
-  display: flex;
-  flex-direction: column;
-  /* align-items: start;
-  justify-content: space-around; */
-  width: 100%;
+/* md	768px	@media (max-width: 768px) { ... } */
+/* muda a partir de 00px*/
+/* para em 768px*/
+
+@media (min-width: 768px) {
+  .home_content {
+    padding-inline: 5vw;
+    flex-direction: row;
+    gap: 1.2rem;
+  }
+
+  .home-paragrafo {
+    font-size: 1.5rem;
+  }
+
+  .home-container {
+    width: 60%;
+  }
 }
